# SGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: SPIR-V.cmake
docs/: StyleGuide.md
inc/sgl/: core.h  framework.h  fundation.h  pch.h  platform.h  sgl.h  utils.h
inc/sgl/core/: assert.h  event.h  family.h  graphics.h  keycode.h  layer.h  mousecode.h  opengl.h  renderer.h  time.h  vulkan.h  window.h  windows.h
inc/sgl/core/event/: callbacks.h  dispatcher.h  event.h  key.h  mouse.h  window.h
inc/sgl/core/family/: _impl.h  compiler.h  config.h  cpu.h  exception.h  lang.h  system.h  type.h
inc/sgl/core/graphics/: vulkan.h  window.h
inc/sgl/core/graphics/vulkan/: debug_messenger.h  instance.h  instance_extension.h  instance_layer.h  physical_device.h
inc/sgl/core/graphics/window/: key.h  window.h
inc/sgl/core/renderer/: buffer.h  camera.h  graphics_context.h  layout.h  renderer.h  renderer_api.h  shader.h  texture.h  vertex_array.h
inc/sgl/core/vulkan/: instance.h
inc/sgl/core/windows/: context.h  keycode.h  window.h
inc/sgl/framework/: application.h  entrypoint.h  layer_stack.h  main.h
inc/sgl/fundation/: compiler.h  config.h  cpu.h  lang.h  ref.h  system.h  type.h  unique.h
inc/sgl/platform/: glfw_window.h  imgui.h  imgui_layer.h  keymap.h
inc/sgl/platform/opengl/: buffer.h  graphics_context.h  renderer_api.h  shader.h  texture.h  vertex_array.h
inc/sgl/utils/: codecvt.h  function_traits.h  log.h
src/core/family/: config.cpp
src/core/graphics/vulkan/: debug_messenger.cpp  instance.cpp  instance_extension.cpp  instance_layer.cpp  physical_device.cpp
src/core/graphics/window/: window.cpp
src/core/windows/: context.cpp  window.cpp
src/family/: config.cpp
src/framework/: main.cpp
src/sgl/: pch.cpp
src/sgl/core/renderer/: buffer.cpp  graphics_context.cpp  layout.cpp  renderer_api.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/sgl/framework/: application.cpp  layer_stack.cpp
src/sgl/fundation/: config.cpp
src/sgl/platform/: glfw_window.cpp  imgui.cpp  imgui_layer.cpp  keymap.cpp
src/sgl/platform/opengl/: buffer.cpp  graphics_context.cpp  renderer_api.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/sgl/utils/: log.cpp
test/: main.cpp
tests/: CMakeLists.txt  main.cpp
